# EdenIDE

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Eden_Original_Idea.md  README.md  text-dit.rar
claude-design/: app.jsx  editor.jsx  index.html  screens.jsx  serve.py  tweaks-panel.jsx
crates/eden-app/: Cargo.toml
crates/eden-app/src/: main.rs
crates/eden-editor/: Cargo.toml
crates/eden-editor/src/: buffer.rs  history.rs  lib.rs  selection.rs
crates/eden-lsp/: Cargo.toml
crates/eden-lsp/src/: client.rs  lib.rs  rpc.rs  types.rs
crates/eden-motion/: Cargo.toml
crates/eden-motion/src/: lib.rs  spring.rs
crates/eden-plugin/: Cargo.toml
crates/eden-plugin/src/: lib.rs
crates/eden-search/: Cargo.toml
crates/eden-search/src/: lib.rs
crates/eden-syntax/: Cargo.toml
crates/eden-syntax/src/: lib.rs
crates/eden-terminal/: Cargo.toml
crates/eden-terminal/src/: lib.rs
crates/eden-theme/: Cargo.toml
crates/eden-theme/src/: color.rs  lib.rs
crates/eden-ui/: Cargo.toml
crates/eden-ui/src/: chrome.rs  lib.rs  logic_panel.rs  paint.rs  panels.rs  text.rs  widget.rs
crates/eden-vcs/: Cargo.toml  build.rs
crates/eden-vcs/src/: lib.rs
crates/eden-workspace/: Cargo.toml
crates/eden-workspace/src/: lib.rs
themes/: eden-brutal-dark.toml  eden-day.toml  eden-dusk.toml  eden-noir.toml  eden-nothing.toml
