[package]
name = "eden-app"
description = "The Eden binary: window, GPU device, event loop, and glue."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
default-run = "eden"

[[bin]]
name = "eden"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
eden-lsp.workspace = true
eden-motion.workspace = true
eden-search.workspace = true
eden-terminal.workspace = true
eden-ui.workspace = true
eden-vcs.workspace = true
eden-workspace.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
pollster = "0.4.0"
tracing.workspace = true
tracing-subscriber.workspace = true
vello = "0.9.0"
winit = "0.30.13"
