[package]
name = "eden-search"
description = "Fuzzy file matching (nucleo) and project-wide content search (ripgrep) for Eden."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
nucleo = "0.5.0"
anyhow.workspace = true
crossbeam-channel.workspace = true
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
tracing.workspace = true
