[package]
name = "eden-syntax"
description = "Tree-sitter integration, incremental highlighting, and indents for Eden."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"
