[package]
name = "eden-syntax"
description = "Tree-sitter integration, incremental highlighting, and indents for Eden."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.2"
tree-sitter-json = "0.24.8"
tree-sitter-typescript = "0.23.2"
tree-sitter-bash = "0.25.1"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
