[package]
name = "eden-terminal"
description = "Embedded terminal for Eden — portable-pty PTY backend with VTE parsing, rendered through the vello pipeline."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
portable-pty = "0.8"
vte = "0.13"
eden-theme.workspace = true
