[package]
name = "eden-theme"
description = "Theme schema, parser, and built-in themes (Day, Dusk, Noir) for Eden."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
