[package]
name = "eden-ui"
description = "Widget tree, layout, render passes, and theming for Eden."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
cosmic-text = "0.19.0"
eden-editor.workspace = true
eden-motion.workspace = true
eden-theme.workspace = true
taffy = "0.10.1"
vello = "0.9.0"
