[package]
name = "eden-vcs"
description = "Git integration for Eden — status, blame, diff models, branches."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
git2 = "0.19"
